src/styles/endsars.css
/* For Twitter */
blockquote {
    margin: 0;
}

::-webkit-scrollbar {
    width: 10px;
}

.page {
    margin: 0;
    padding-top: 4rem;
    font: 1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    background-color: rgb(246,254,254);
}

.logo {
    margin: 0;
    display: flex;
    justify-content: center;
}

.description {
    text-align: center;
    margin: 0 0 0.5rem 0;
    color: rgb(103,137,116);
}

/* * {
    outline: 1px solid red;
} */

.nav-cont {
    /* display: flex;
    justify-content: center;
    margin-bottom: 1.5rem; */

    position: sticky;
    top: -1px;
    overflow: scroll;
    text-align: center;
    /* box-shadow: 0 2px 2px rgb(213,247,226); */
}

.nav {
    list-style-type: none;
    display: inline-flex;
    padding: 0.75rem 1rem;
    justify-content: center;
    margin: 0;
    background-color: rgba(250, 255, 250, 0.7);
    
    /* width: 100%;
    overflow-x: scroll;
    justify-content: center;
    box-sizing: border-box; */

    /* position: sticky;
    top: 0; */
}


/* Spacing between extreme ends of a single line flex container */
.nav:before,
.nav:after {
    content: '';
    flex: 0 0 1rem;
}

.nav__item {
    background: #efefef;
    padding: 0.2rem 1rem 0.3rem;
    border-radius: 0.3rem;
    text-decoration: none;
    display: block;
    color: rgb(58,77,73);

    margin: 0 0.5rem;
}

.nav__item_pinkish-bg {
    background-color: rgb(254,228,229);
}

.nav__item_greenish-bg {
    background-color: rgb(207,249,227);
}

.nav__item_orangish-bg {
    background-color: rgb(253,237,211);
}

.nav__item_active {
    background: none;
    border-bottom: 4px solid rgb(58,77,73);
    position: relative;
}

.nav__item_active::after {
    content: '\023df';
    position: absolute;
    bottom: -0.5rem;
    left: 0;
    right: 0;
    font-weight: bold;
    color: rgb(58,77,73);
    font-size: 1rem;
}

.entry {
    margin-bottom: 0.5rem;
}

.entry__summary {
    line-height: 2;
    background-color: #f0f0f0;
    padding: 0.25rem 1rem;
    color: white;
    background-color: rgb(103,137,116);
}

.entry__details {
    display: flex;
    overflow-x: scroll;
    margin: 1rem 0 1.5rem;
}

.entry__details::-webkit-scrollbar-thumb {
    background: rgb(33,47,36);
    border-radius: 2rem;
}

.entry__details::-webkit-scrollbar-track {
    box-shadow: inset 0 0 3px rgb(168, 196, 179);
    border-radius: 2rem;
}

.entry__details:before,
.entry__details:after {
    content: '';
    flex: 0 0 1rem;
}

.twitter-tweet-cont {
    height: 375px;
    width: 200px;
    flex: 0 0 auto;
    border: 1px solid #efefef;
    border-radius: 1rem;
    padding: 0 1rem;
    margin: 0 0.25rem 1.5rem;
    word-break: break-word;
    overflow-y: scroll;
}

.twitter-tweet-cont::-webkit-scrollbar-thumb {
    background: rgb(103,137,116);
    border-radius: 2rem;
}

.data {
    margin: 0 0 3rem 0;
}

.footer {
    text-align: center;
    padding: 3rem;
    background: rgb(24,45,25);
    color: white;
}

.js-active .entry__summary {
    display: none;
}



/* ::-webkit-scrollbar-thumb {
    background: rgb(103,137,116);
    border-radius: 20px;
} */


/* ::-webkit-scrollbar-corner {
    border-radius: 10px;
} */
@media screen and (min-width: 500px) {
    


}
/* 
#cases .entry__details div {
    background-color: darkgoldenrod;
}
#protest .entry__details div {
    background-color: lightblue;
} */

.footerr {
    text-align: center;
    color: rgb(103,137,116);
}
.footer-preview {
    display: flex;
}

.endsars-img {
    width: 25%;
}

.love {
    color: green;
}

.footer-link {
    text-decoration: none;
    color: rgb(58,77,73);
}

.image-credits {
    margin: 0.5rem auto 2rem;
    font-size: 0.875rem;
}

